# reid-soft-attributes

./: .gitignore  AGENTS.md  README.md  config.yaml  iqa_cache.npy  main.py  pyproject.toml
src/: config.py  dataset.py  evaluate.py  iqa.py  train.py  utils.py
src/model/: model.py
src/model/APAN/: APAN.py  GAP.py  LSTM.py  PAFM.py
src/model/APN/: APN.py  LTN.py  MFPM.py  resnet.py
